shopModx-2.1.1-beta
========================================
- Added empty basket processor
- Minor bugfix


shopModx-2.1.0-beta
========================================
- Added payment processor
- Added robokassa payment processor
- Added OnShopModxOrderBeforeSave event
- Added Console script


shopModx-2.0.0-beta
========================================
- Code refactoring
- Merge Billing Extra into shopModx
- Merge Basket Extra into shopModx
- Merge shopModxGroupEdit Extra into shopModx
- Remove ShopmodxResourceProduct class and other CRC


shopModx-0.2.0-beta
========================================
- Added param includeTVs in ShopmodxWebGetDataProcessor. Default true.
- ShopmodxWebGetDataProcessor::getData optimization.
- Added caching in ShopmodxWebGetlistProcessor

shopModx-0.1.1-beta
========================================
- [#8] Set modWebResourceproductGetlistProcessor::setSelection() to protected
- [#6] Renamed PrepareUniqObjectsQuery to prepareUniqObjectsQuery
- Minor bugfix

shopModx-0.1.0-beta
========================================
- Added method ShopmodxResourceProduct::duplicate
- Minor bugfix

shopModx-0.0.9-beta
========================================
- Removed ShopmodxTemplate class
- Added method ShopmodxWebGetlistProcessor::countTotal

shopModx-0.0.8-beta
========================================
- ShopmodxWebGetListProcessor code refactoring
- ShopmodxWebGetDataProcessor code refactoring


shopModx-0.0.7-beta
========================================
- ShopmodxWebGetListProcessor code refactoring
- ShopmodxWebGetDataProcessor code refactoring


shopModx-0.0.6-beta
========================================
- [#2] Exclude unpublished currencies
- Added shopResource data controllers
- Added ShopmodxWebGetlistProcessor
- Added ShopmodxWebGetDataProcessor
- Added ShopmodxWebGetCollectionProcessor
- Added modWebResourceproductGetlistProcessor
- Added modWebResourceproductGetDataProcessor
- Added modWebResourceproductGetcollectionProcessor

